# actix_authentication

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20250109235517_create-table.sql
src/: handlers.rs  main.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
src/models/: user.rs
src/routes/: game.rs  mod.rs
