[package]
name = "actix_authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0"
actix-web = "4"
actix-cors = "0"
config = "0"
dotenv = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0"
color-eyre = "0"
tracing = "0"
tracing-futures = "0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0", features= ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0"
validator_derive = "0"
jsonwebtoken = "9"
argonautica = { version = "0", features = ["simd"] }
futures = { version = "0.3", features = ["compat"] }
utoipa = { version="5", features = ["actix_extras"]}
utoipa-swagger-ui = {version="8", features=["actix-web"]}
